Clean up edit category layout, CSS fixes for high-contrast/text sizer parameters
git-svn-id: http://joomlacode.org/svn/joomla/development/trunk@13038 6f6e1ebd-4c2b-0410-823f-f34bde69bce9

--- a/administrator/templates/bluestork/css/highcontrast.css
+++ b/administrator/templates/bluestork/css/highcontrast.css
@@ -7,7 +7,8 @@
  */
 
 
-body {
+body,
+div#sbox-content {
 	font-size: 12px;
 	font-weight: bold !important;
 	color: #FFFFFF;
@@ -189,6 +190,33 @@ table.adminlist tfoot th { background-color: #000;  }
 	background: #000;
 }
 
+div#element-box div.m,
+div#toolbar-box div.m,
+div#submenu-box div.m,
+form#weblink-form fieldset, 
+form#item-form fieldset, 
+fieldset.batch,
+tr.row1,
+div.width-30 fieldset, 	
+div.width-35 fieldset, 
+div.width-40 fieldset, 
+div.width-45 fieldset, 
+div.width-50 fieldset, 
+div.width-55 fieldset, 
+div.width-60 fieldset, 
+div.width-65 fieldset, 
+div.width-70 fieldset,
+div.width-100 fieldset {
+	background-color: #000;
+}
+
+
+table.adminlist thead th {
+	border-right: 1px solid #fff;
+}
+table.adminlist {
+border-top: 1px solid #fff;
+}
 
 
 div#submenu-box div.t div.t {
@@ -259,4 +287,22 @@ div#element-box div.b div.b div.b {
 #system-message dd ul {
 	color:#fff;
 
+}
+
+
+#menu li.disabled a {
+	color:#acacac;
+}
+div.pagetitle h2 {
+	color:#FFF;
+}
+
+.button2-left a, 
+.button2-right a {
+	color:#000;
+
+}
+.jpane-toggler a,
+.jpane-toggler-down a {
+text-decoration:none;
 }
